--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,8 @@ object-fit: cover;
 }
 
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif !important;
+    font-family: 'Montserrat', sans-serif !important;
+    font-weight: 200 !important;
 }
 
 .items .card:hover {
